<resources>
    <string name="app_name">Calculator</string>

    <string name="digit_zero">0</string>
    <string name="digit_one">1</string>
    <string name="digit_two">2</string>
    <string name="digit_three">3</string>
    <string name="digit_four">4</string>
    <string name="digit_five">5</string>
    <string name="digit_six">6</string>
    <string name="digit_seven">7</string>
    <string name="digit_eight">8</string>
    <string name="digit_nine">9</string>
    <string name="addition">+</string>
    <string name="subtraction">–</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
    <string name="equals">=</string>
    <string name="decimal_separator">.</string>
    <string name="clear">C</string>
    <string name="all_clear">AC</string>
    <string name="signed">+/–</string>
    <string name="percent">%</string>

    <string name="mode">MODE</string>

    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="reverse">1/x</string>
    <string name="factorial">x!</string>
    <string name="natural_logarithm">ln</string>
    <string name="exponenta">exp</string>
    <string name="power">pow</string>
    <string name="sqrt">√</string>
    <string name="pi">PI</string>
    <string name="eyler_num">e</string>
    <string name="random">Rand</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="cat">cat</string>
</resources>
